--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "pull:types": "npx supabase gen types typescript --project-id ggbqlmncfsjmdipndufo > lib/database.types.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
