--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "pull:types": "npx supabase gen types typescript --project-id ggbqlmncfsjmdipndufo > lib/database.types.ts"
   },
   "dependencies": {
+    "@conform-to/react": "^1.2.2",
+    "@conform-to/zod": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.3",
