--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/jsonwebtoken": "^9.0.9",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
