--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "^15.3.2",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
