--- a/package.json
+++ b/package.json
@@ -40,14 +40,22 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@types/node": "22.10.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "^4.7.0",
+    "jsdom": "^26.1.0",
     "postcss": "8.4.49",
     "supabase": "^2.6.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
